Add support page and update navigation links
Added support.html with contact info, FAQ, troubleshooting, and resources. Updated navigation in index.html and privacy.html to include Support links. Refreshed iPhone 16 Pro Max screenshots.

--- a/index.html
+++ b/index.html
@@ -281,7 +281,8 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="nav-bar">
-            <a href="privacy.html" class="privacy-link">Privacy Policy</a>
+            <a href="support.html" class="privacy-link">Support</a>
+            <a href="privacy.html" class="privacy-link" style="margin-left: 15px;">Privacy Policy</a>
         </div>
         <img src="icon.png" alt="AI Travel Planner Icon" class="hero-icon">
         <h1>Your Personal AI Travel Concierge</h1>
