--- a/privacy.html
+++ b/privacy.html
@@ -178,6 +178,9 @@
 
     <div class="container">
         <a href="index.html" class="back-link">Back to Home</a>
+        <div style="margin-bottom: 20px;">
+            <a href="support.html" class="back-link" style="margin-left: 20px;">Support & Help</a>
+        </div>
         
         <div class="effective-date">
             <strong>Effective Date:</strong> 04 September 2025<br>
