Remove phone support contact information
Phone number and references to phone support have been removed from the privacy policy, privacy.html, and support.html. All contact and support is now directed through email and mailing address only.

--- a/privacy.html
+++ b/privacy.html
@@ -298,8 +298,7 @@
             <h3>Contact Information</h3>
             <p>If you have questions, concerns, or requests regarding this Privacy Policy or our data practices, please contact us:</p>
             <p><strong>Email:</strong> ddutchie@gmail.com<br>
-            <strong>Address:</strong> 705 King Street West, Toronto, M5V 2W8<br>
-            <strong>Phone Number:</strong> +1 437-848-0159</p>
+            <strong>Address:</strong> 705 King Street West, Toronto, M5V 2W8</p>
             <p>For privacy-related concerns, please include "Privacy Policy" in the subject line.</p>
         </div>
 
