--- a/support.html
+++ b/support.html
@@ -320,12 +320,6 @@
                 <a href="mailto:ddutchie@gmail.com?subject=AI Travel Planner Support" class="support-button">Email Us</a>
             </div>
             <div class="support-card">
-                <div class="emoji">📞</div>
-                <h3>Phone Support</h3>
-                <p>Speak directly with our support team</p>
-                <a href="tel:+14378480159" class="support-button">Call Now</a>
-            </div>
-            <div class="support-card">
                 <div class="emoji">❓</div>
                 <h3>FAQ</h3>
                 <p>Find quick answers to common questions</p>
@@ -465,7 +459,7 @@
         <!-- Contact Section -->
         <div class="contact-section">
             <h2>Still Need Help?</h2>
-            <p>Our support team is here to help you plan amazing adventures. We typically respond within 24 hours.</p>
+            <p>Our support team is here to help you plan amazing adventures via email. We typically respond within 24 hours.</p>
             
             <div class="contact-grid">
                 <div class="contact-item">
@@ -473,12 +467,6 @@
                     <p>For detailed questions and technical support</p>
                     <p><a href="mailto:ddutchie@gmail.com">ddutchie@gmail.com</a></p>
                     <p>Include "Support Request" in the subject line</p>
-                </div>
-                <div class="contact-item">
-                    <h3>📞 Phone Support</h3>
-                    <p>For urgent issues and immediate assistance</p>
-                    <p><a href="tel:+14378480159">+1 437-848-0159</a></p>
-                    <p>Available Monday-Friday, 9 AM - 6 PM EST</p>
                 </div>
                 <div class="contact-item">
                     <h3>📍 Mailing Address</h3>
@@ -492,7 +480,6 @@
         <div class="response-time">
             <h4>📅 Support Response Times</h4>
             <p><strong>Email Support:</strong> Within 24 hours (usually much faster)</p>
-            <p><strong>Phone Support:</strong> Immediate during business hours</p>
             <p><strong>Premium Users:</strong> Priority support with faster response times</p>
         </div>
 
